--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,69 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer components {
+  .home {
+    background-image: url("../components/images/page_1_background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
-  body {
-    color: white;
-    background: black;
+
+  .nedir {
+    background-image: url("../components/images/page_2_background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .nelervar {
+    background-image: url("../components/images/page_3_background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .konusmacilar {
+    background-image: url("../components/images/page_5_background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .gallery {
+    background-image: url("../components/images/page_6_background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .sponsors {
+    background-image: url("../components/images/page_7_background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .home-page_title {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 1) 12%,
+      rgba(2, 198, 203, 1) 12%,
+      rgba(2, 198, 203, 1) 49%,
+      rgba(255, 255, 255, 1) 49%
+    );
+  }
+
+  .home-page_titlebox {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0) 12%,
+      #CC0A0A 12%,
+      #CC0A0A 49%,
+      rgba(255, 255, 255, 0) 49%
+    );
   }
 }
